--- a/index.html
+++ b/index.html
@@ -71,12 +71,11 @@
     <div class="container">
         <h1 class="title">Grow Bags for Your Garden</h1>
         <p class="subtitle">Perfect for Urban Gardening</p>
-        <img src="https://via.placeholder.com/600x400" alt="Grow Bag Image" class="image">
+        <img src="https://m.media-amazon.com/images/I/810rpcfG1DL._SX569_.jpg" alt="Grow Bag Image" class="image">
         <p class="description">
-            Grow bags are an excellent way to nurture your plants in a controlled environment. Durable, eco-friendly, and
-            perfect for both indoor and outdoor spaces, they allow for better root aeration and water drainage.
+            PLANT CARE HDPE Nursery Cover Green Bags, Indoor & Outdoor Grow Containers for Vegetables Fruits Flowers.-Pack of 10 (18 in X 18 in)
         </p>
-        <a href="#" class="cta-button">Shop Now</a>
+        <a href="https://amzn.to/3YG7z2e" class="cta-button">Shop Now</a>
     </div>
 
 </body>
