--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             width: 90%;
             max-width: 600px;
             padding: 20px;
+            padding-top: 30px; /* Added padding for better spacing */
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -41,7 +42,9 @@
         .image {
             width: 100%;
             max-width: 100%;
+            max-height: 300px; /* Set a max height to prevent stretching */
             border-radius: 8px;
+            object-fit: cover; /* Ensure the image is scaled nicely */
             margin-bottom: 20px;
         }
         .description {
@@ -73,7 +76,7 @@
         <p class="subtitle">Perfect for Urban Gardening</p>
         <img src="https://m.media-amazon.com/images/I/810rpcfG1DL._SX569_.jpg" alt="Grow Bag Image" class="image">
         <p class="description">
-            PLANT CARE HDPE Nursery Cover Green Bags, Indoor & Outdoor Grow Containers for Vegetables Fruits Flowers.-Pack of 10 (18 in X 18 in)
+            PLANT CARE HDPE Nursery Cover Green Bags, Indoor & Outdoor Grow Containers for Vegetables Fruits Flowers - Pack of 10 (18 in X 18 in)
         </p>
         <a href="https://amzn.to/3YG7z2e" class="cta-button">Shop Now</a>
     </div>
